add modularized libraries and applications

--- a/source/system/boot/assets/index.html
+++ b/source/system/boot/assets/index.html
@@ -16,8 +16,6 @@
 			body {
 				background: black;
 				color: #ccc;
-				font: 16px boot, monospace;
-				white-space: pre-wrap;
 				padding: 0;
 				margin: 0;
 			}
@@ -26,6 +24,12 @@
 				display: block;
 				margin: 1em;
 				fill: currentColor;
+			}
+
+			ui-console {
+				display: block;
+				white-space: pre-wrap;
+				font: 16px boot, monospace;
 			}
 
 			ui-console ui-cursor {
